log/build_2024-09-28_12-48-56/go_to_goal/stderr.log
  File "/home/mayo_poyo/ros2_ws2/install/go_to_goal/lib/python3.12/site-packages/go_to_goal/gtg.py", line 21
    route_theta = math.atan2((curr_y-int sys argv[2])/(curr_x-int sys argv[1]))
                              ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

